--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -5,6 +5,16 @@
   animation: meals-appear 1s ease-out forwards;
 }
 
+.isLoading {
+  text-align: center;
+  color: black;
+}
+
+.error {
+  text-align: center;
+  color: red;
+}
+
 .meals ul {
   list-style: none;
   margin: 0;
